icon change when you change the color scheme

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <header class="header">
       <nav class="header__nav">
         <div>
-          <p>LOGO</p>
+          <p>Job Listing</p>
         </div>
 
         <div class="header__nav--toggle">
-          <i data-color-scheme-btn class="fa-solid fa-moon"></i>
+          <i data-color-scheme-btn class="fa-solid fa-sun"></i>
         </div>
       </nav>
     </header>
